# Motd

./: .coveragerc  .isort.cfg  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  package-lock.json  pyproject.toml  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
madashboard/: admin.py  apps.py  models.py  urls.py  views.py
madashboard/migrations/: 0001_initial.py  0002_statemotd.py
madashboard/templates/madashboard/: motd.html
motd/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  forms.py  managers.py  models.py  tasks.py  urls.py  views.py
motd/management/commands/: motd_cleanup.py
motd/migrations/: 0001_initial.py  0002_alter_motdmessage_show_to_all_and_more.py  0002_statemotd.py  0003_cleanup_conflicts.py  0003_general_remove_groupmotd_group_delete_statemotd_and_more.py
motd/static/motd/css/: motd.css
motd/static/motd/js/: delete-modal.js  form.js
motd/templates/motd/: dashboard_widget.html  motd.html  motd_form.html  motd_list.html  normal.html
motd/templates/motd/bundles/: motd-form-bundle.html
motd/templates/motd/partials/message/: admin.html  footer.html
motd/templates/motd/partials/modals/: delete.html
motd/templates/partials/: page_header.html
motd/tests/: test_auth_hook.py
motd/tests/testdata/: allianceauth.json  generate_motd.py
motd/tests/views/: test_access.py
testauth/settings/: local.py
