[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-motd"
description = "Message of the Day app for Alliance Auth."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Cokkoc Zateki", email = "cokkoc.zateki@example.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.8,<5",
    "allianceauth-app-utils>=1.26",
]
optional-dependencies.tests-allianceauth-latest = [
    "coverage",
    "factory-boy",
]
urls.Changelog = "https://github.com/CokkocZateki/aa-motd/blob/master/CHANGELOG.md"
urls.Documentation = "https://github.com/CokkocZateki/aa-motd/blob/master/README.md"
urls.Donations = "https://ko-fi.com/CokkocZateki"
urls.Homepage = "https://github.com/CokkocZateki/aa-motd"
urls.Source = "https://github.com/CokkocZateki/aa-motd"
urls.Tracker = "https://github.com/CokkocZateki/aa-motd/issues"

[tool.hatch.build]
include = [
    "/motd",
]

[tool.hatch.version]
path = "motd/__init__.py"
